--- a/Notebook/EDA.ipynb
+++ b/Notebook/EDA.ipynb
@@ -1,8 +1,162 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff462ba1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import kagglehub as kg\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a63f336e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading to /Users/vlad/.cache/kagglehub/datasets/yasserh/breast-cancer-dataset/1.archive...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 48.6k/48.6k [00:00<00:00, 747kB/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting files...\n",
+      "Path to dataset files: /Users/vlad/.cache/kagglehub/datasets/yasserh/breast-cancer-dataset/versions/1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Download latest version\n",
+    "path = kg.dataset_download(\"yasserh/breast-cancer-dataset\")\n",
+    "\n",
+    "print(\"Path to dataset files:\", path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "e3095fec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CSV utilisé : /Users/vlad/.cache/kagglehub/datasets/yasserh/breast-cancer-dataset/versions/1/breast-cancer.csv\n",
+      "         id diagnosis  radius_mean  texture_mean  perimeter_mean  area_mean  \\\n",
+      "0    842302         M        17.99         10.38          122.80     1001.0   \n",
+      "1    842517         M        20.57         17.77          132.90     1326.0   \n",
+      "2  84300903         M        19.69         21.25          130.00     1203.0   \n",
+      "3  84348301         M        11.42         20.38           77.58      386.1   \n",
+      "4  84358402         M        20.29         14.34          135.10     1297.0   \n",
+      "\n",
+      "   smoothness_mean  compactness_mean  concavity_mean  concave points_mean  \\\n",
+      "0          0.11840           0.27760          0.3001              0.14710   \n",
+      "1          0.08474           0.07864          0.0869              0.07017   \n",
+      "2          0.10960           0.15990          0.1974              0.12790   \n",
+      "3          0.14250           0.28390          0.2414              0.10520   \n",
+      "4          0.10030           0.13280          0.1980              0.10430   \n",
+      "\n",
+      "   ...  radius_worst  texture_worst  perimeter_worst  area_worst  \\\n",
+      "0  ...         25.38          17.33           184.60      2019.0   \n",
+      "1  ...         24.99          23.41           158.80      1956.0   \n",
+      "2  ...         23.57          25.53           152.50      1709.0   \n",
+      "3  ...         14.91          26.50            98.87       567.7   \n",
+      "4  ...         22.54          16.67           152.20      1575.0   \n",
+      "\n",
+      "   smoothness_worst  compactness_worst  concavity_worst  concave points_worst  \\\n",
+      "0            0.1622             0.6656           0.7119                0.2654   \n",
+      "1            0.1238             0.1866           0.2416                0.1860   \n",
+      "2            0.1444             0.4245           0.4504                0.2430   \n",
+      "3            0.2098             0.8663           0.6869                0.2575   \n",
+      "4            0.1374             0.2050           0.4000                0.1625   \n",
+      "\n",
+      "   symmetry_worst  fractal_dimension_worst  \n",
+      "0          0.4601                  0.11890  \n",
+      "1          0.2750                  0.08902  \n",
+      "2          0.3613                  0.08758  \n",
+      "3          0.6638                  0.17300  \n",
+      "4          0.2364                  0.07678  \n",
+      "\n",
+      "[5 rows x 32 columns]\n",
+      "Nombre de lignes : 569\n",
+      "Nombre de colonnes : 32\n",
+      "Nombre total d'observations : 18208\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Trouver un fichier CSV dans le dossier téléchargé\n",
+    "csv_files = []\n",
+    "for root, _, files in os.walk(path):\n",
+    "    for f in files:\n",
+    "        if f.lower().endswith(\".csv\"):\n",
+    "            csv_files.append(os.path.join(root, f))\n",
+    "\n",
+    "if not csv_files:\n",
+    "    raise FileNotFoundError(\"Aucun fichier .csv trouvé dans le dossier téléchargé.\")\n",
+    "\n",
+    "csv_path = csv_files[0]  # premier CSV trouvé\n",
+    "print(\"CSV utilisé :\", csv_path)\n",
+    "\n",
+    "# Charger le dataset\n",
+    "df = pd.read_csv(csv_path)\n",
+    "\n",
+    "# Afficher le début\n",
+    "print(df.head())\n",
+    "\n",
+    "# Afficher nb lignes, nb colonnes, nb total d'observations (cellules)\n",
+    "n_rows, n_cols = df.shape\n",
+    "print(\"Nombre de lignes :\", n_rows)\n",
+    "print(\"Nombre de colonnes :\", n_cols)\n",
+    "print(\"Nombre total d'observations :\", n_rows * n_cols)"
+   ]
+  }
+ ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
